lambdaAst.output
   0  $accept : %entry% $end

   1  const : NIL
   2        | ZERO
   3        | SUCC
   4        | FALSE
   5        | TRUE
   6        | VAR
   7        | NAT
   8        | BOOL
   9        | UNIT
  10        | PROP
  11        | SMALL
  12        | TYPE LSQ INT RSQ

  13  term : term EQ term TYPE_HINT term
  14       | atom_term ARROW term
  15       | term PROP_AND term
  16       | term PROP_OR term
  17       | LSQ term RSQ AMPERSAND LSQ term RSQ
  18       | app_term
  19       | SLASH VAR COLLON term DOT term
  20       | SLASH WILDCARD COLLON term DOT term
  21       | FORALL VAR COLLON term DOT term
  22       | FORALL WILDCARD COLLON term DOT term
  23       | EXISTS VAR COLLON term DOT term
  24       | atom_term SUBTYPE atom_term

  25  atom_term : EQ_REFL LPARAN term SEMICOLLON term RPARAN
  26            | SUBTRANS LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN
  27            | SUBPROD LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN
  28            | SUBREFL LPARAN term RPARAN
  29            | SUBSUB LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN
  30            | SBOOLL LPARAN term SEMICOLLON term RPARAN
  31            | SBOOLR LPARAN term SEMICOLLON term RPARAN
  32            | SUBUNREFINE LPARAN term SEMICOLLON term RPARAN
  33            | SUBGEN LPARAN term SEMICOLLON term SEMICOLLON term RPARAN
  34            | MEMBERSHIP LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN
  35            | NATREC LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN
  36            | BOOLREC LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN
  37            | SUMBOOLREC LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN
  38            | const
  39            | LBRACE term BAR term RBRACE
  40            | LPARAN term RPARAN
  41            | LSQ term BAR term RSQ
  42            | EXIST LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN
  43            | OR_INTROL LPARAN term SEMICOLLON term SEMICOLLON term RPARAN
  44            | OR_INTROR LPARAN term SEMICOLLON term SEMICOLLON term RPARAN
  45            | AND_INTRO LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN

  46  app_term : atom_term
  47           | app_term atom_term

  48  lambda_term : term EOF

  49  %entry% : '\001' lambda_term

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . lambda_term  (49)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	lambda_term  goto 38
	const  goto 39
	term  goto 40
	atom_term  goto 41
	app_term  goto 42


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	const : VAR .  (6)

	.  reduce 6


state 4
	atom_term : LBRACE . term BAR term RBRACE  (39)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 43
	atom_term  goto 41
	app_term  goto 42


state 5
	atom_term : LPARAN . term RPARAN  (40)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 44
	atom_term  goto 41
	app_term  goto 42


state 6
	const : ZERO .  (2)

	.  reduce 2


state 7
	const : SUCC .  (3)

	.  reduce 3


state 8
	const : NIL .  (1)

	.  reduce 1


state 9
	const : TRUE .  (5)

	.  reduce 5


state 10
	const : FALSE .  (4)

	.  reduce 4


state 11
	term : SLASH . VAR COLLON term DOT term  (19)
	term : SLASH . WILDCARD COLLON term DOT term  (20)

	WILDCARD  shift 45
	VAR  shift 46
	.  error


state 12
	term : FORALL . VAR COLLON term DOT term  (21)
	term : FORALL . WILDCARD COLLON term DOT term  (22)

	WILDCARD  shift 47
	VAR  shift 48
	.  error


state 13
	term : EXISTS . VAR COLLON term DOT term  (23)

	VAR  shift 49
	.  error


state 14
	const : UNIT .  (9)

	.  reduce 9


state 15
	const : BOOL .  (8)

	.  reduce 8


state 16
	const : NAT .  (7)

	.  reduce 7


state 17
	term : LSQ . term RSQ AMPERSAND LSQ term RSQ  (17)
	atom_term : LSQ . term BAR term RSQ  (41)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 50
	atom_term  goto 41
	app_term  goto 42


state 18
	const : PROP .  (10)

	.  reduce 10


state 19
	const : SMALL .  (11)

	.  reduce 11


state 20
	const : TYPE . LSQ INT RSQ  (12)

	LSQ  shift 51
	.  error


state 21
	atom_term : NATREC . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (35)

	LPARAN  shift 52
	.  error


state 22
	atom_term : BOOLREC . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (36)

	LPARAN  shift 53
	.  error


state 23
	atom_term : SUMBOOLREC . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (37)

	LPARAN  shift 54
	.  error


state 24
	atom_term : MEMBERSHIP . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (34)

	LPARAN  shift 55
	.  error


state 25
	atom_term : SUBTRANS . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (26)

	LPARAN  shift 56
	.  error


state 26
	atom_term : SUBPROD . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (27)

	LPARAN  shift 57
	.  error


state 27
	atom_term : SUBREFL . LPARAN term RPARAN  (28)

	LPARAN  shift 58
	.  error


state 28
	atom_term : SUBSUB . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (29)

	LPARAN  shift 59
	.  error


state 29
	atom_term : SUBGEN . LPARAN term SEMICOLLON term SEMICOLLON term RPARAN  (33)

	LPARAN  shift 60
	.  error


state 30
	atom_term : SUBUNREFINE . LPARAN term SEMICOLLON term RPARAN  (32)

	LPARAN  shift 61
	.  error


state 31
	atom_term : SBOOLL . LPARAN term SEMICOLLON term RPARAN  (30)

	LPARAN  shift 62
	.  error


state 32
	atom_term : SBOOLR . LPARAN term SEMICOLLON term RPARAN  (31)

	LPARAN  shift 63
	.  error


state 33
	atom_term : OR_INTROL . LPARAN term SEMICOLLON term SEMICOLLON term RPARAN  (43)

	LPARAN  shift 64
	.  error


state 34
	atom_term : OR_INTROR . LPARAN term SEMICOLLON term SEMICOLLON term RPARAN  (44)

	LPARAN  shift 65
	.  error


state 35
	atom_term : AND_INTRO . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (45)

	LPARAN  shift 66
	.  error


state 36
	atom_term : EQ_REFL . LPARAN term SEMICOLLON term RPARAN  (25)

	LPARAN  shift 67
	.  error


state 37
	atom_term : EXIST . LPARAN term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (42)

	LPARAN  shift 68
	.  error


state 38
	%entry% : '\001' lambda_term .  (49)

	.  reduce 49


state 39
	atom_term : const .  (38)

	.  reduce 38


state 40
	term : term . EQ term TYPE_HINT term  (13)
	term : term . PROP_AND term  (15)
	term : term . PROP_OR term  (16)
	lambda_term : term . EOF  (48)

	EOF  shift 69
	EQ  shift 70
	PROP_AND  shift 71
	PROP_OR  shift 72
	.  error


state 41
	term : atom_term . ARROW term  (14)
	term : atom_term . SUBTYPE atom_term  (24)
	app_term : atom_term .  (46)

	ARROW  shift 73
	SUBTYPE  shift 74
	EOF  reduce 46
	SEMICOLLON  reduce 46
	VAR  reduce 46
	LBRACE  reduce 46
	RBRACE  reduce 46
	LPARAN  reduce 46
	RPARAN  reduce 46
	ZERO  reduce 46
	SUCC  reduce 46
	NIL  reduce 46
	TRUE  reduce 46
	FALSE  reduce 46
	EQ  reduce 46
	PROP_AND  reduce 46
	PROP_OR  reduce 46
	DOT  reduce 46
	TYPE_HINT  reduce 46
	UNIT  reduce 46
	BOOL  reduce 46
	NAT  reduce 46
	BAR  reduce 46
	LSQ  reduce 46
	RSQ  reduce 46
	PROP  reduce 46
	SMALL  reduce 46
	TYPE  reduce 46
	NATREC  reduce 46
	BOOLREC  reduce 46
	SUMBOOLREC  reduce 46
	MEMBERSHIP  reduce 46
	SUBTRANS  reduce 46
	SUBPROD  reduce 46
	SUBREFL  reduce 46
	SUBSUB  reduce 46
	SUBGEN  reduce 46
	SUBUNREFINE  reduce 46
	SBOOLL  reduce 46
	SBOOLR  reduce 46
	OR_INTROL  reduce 46
	OR_INTROR  reduce 46
	AND_INTRO  reduce 46
	EQ_REFL  reduce 46
	EXIST  reduce 46


state 42
	term : app_term .  (18)
	app_term : app_term . atom_term  (47)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 75
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	EOF  reduce 18
	SEMICOLLON  reduce 18
	RBRACE  reduce 18
	RPARAN  reduce 18
	EQ  reduce 18
	PROP_AND  reduce 18
	PROP_OR  reduce 18
	DOT  reduce 18
	TYPE_HINT  reduce 18
	BAR  reduce 18
	RSQ  reduce 18

	const  goto 39
	atom_term  goto 76


state 43
	term : term . EQ term TYPE_HINT term  (13)
	term : term . PROP_AND term  (15)
	term : term . PROP_OR term  (16)
	atom_term : LBRACE term . BAR term RBRACE  (39)

	EQ  shift 70
	PROP_AND  shift 71
	PROP_OR  shift 72
	BAR  shift 77
	.  error


state 44
	term : term . EQ term TYPE_HINT term  (13)
	term : term . PROP_AND term  (15)
	term : term . PROP_OR term  (16)
	atom_term : LPARAN term . RPARAN  (40)

	RPARAN  shift 78
	EQ  shift 70
	PROP_AND  shift 71
	PROP_OR  shift 72
	.  error


state 45
	term : SLASH WILDCARD . COLLON term DOT term  (20)

	COLLON  shift 79
	.  error


state 46
	term : SLASH VAR . COLLON term DOT term  (19)

	COLLON  shift 80
	.  error


state 47
	term : FORALL WILDCARD . COLLON term DOT term  (22)

	COLLON  shift 81
	.  error


state 48
	term : FORALL VAR . COLLON term DOT term  (21)

	COLLON  shift 82
	.  error


state 49
	term : EXISTS VAR . COLLON term DOT term  (23)

	COLLON  shift 83
	.  error


state 50
	term : term . EQ term TYPE_HINT term  (13)
	term : term . PROP_AND term  (15)
	term : term . PROP_OR term  (16)
	term : LSQ term . RSQ AMPERSAND LSQ term RSQ  (17)
	atom_term : LSQ term . BAR term RSQ  (41)

	EQ  shift 70
	PROP_AND  shift 71
	PROP_OR  shift 72
	BAR  shift 84
	RSQ  shift 85
	.  error


state 51
	const : TYPE LSQ . INT RSQ  (12)

	INT  shift 86
	.  error


state 52
	atom_term : NATREC LPARAN . term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (35)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 87
	atom_term  goto 41
	app_term  goto 42


state 53
	atom_term : BOOLREC LPARAN . term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (36)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 88
	atom_term  goto 41
	app_term  goto 42


state 54
	atom_term : SUMBOOLREC LPARAN . term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (37)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 89
	atom_term  goto 41
	app_term  goto 42


state 55
	atom_term : MEMBERSHIP LPARAN . term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (34)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 90
	atom_term  goto 41
	app_term  goto 42


state 56
	atom_term : SUBTRANS LPARAN . term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (26)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 91
	atom_term  goto 41
	app_term  goto 42


state 57
	atom_term : SUBPROD LPARAN . term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (27)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 92
	atom_term  goto 41
	app_term  goto 42


state 58
	atom_term : SUBREFL LPARAN . term RPARAN  (28)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 93
	atom_term  goto 41
	app_term  goto 42


state 59
	atom_term : SUBSUB LPARAN . term SEMICOLLON term SEMICOLLON term SEMICOLLON term RPARAN  (29)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 94
	atom_term  goto 41
	app_term  goto 42


state 60
	atom_term : SUBGEN LPARAN . term SEMICOLLON term SEMICOLLON term RPARAN  (33)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 95
	atom_term  goto 41
	app_term  goto 42


state 61
	atom_term : SUBUNREFINE LPARAN . term SEMICOLLON term RPARAN  (32)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 96
	atom_term  goto 41
	app_term  goto 42


state 62
	atom_term : SBOOLL LPARAN . term SEMICOLLON term RPARAN  (30)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 97
	atom_term  goto 41
	app_term  goto 42


state 63
	atom_term : SBOOLR LPARAN . term SEMICOLLON term RPARAN  (31)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 98
	atom_term  goto 41
	app_term  goto 42


state 64
	atom_term : OR_INTROL LPARAN . term SEMICOLLON term SEMICOLLON term RPARAN  (43)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 99
	atom_term  goto 41
	app_term  goto 42


state 65
	atom_term : OR_INTROR LPARAN . term SEMICOLLON term SEMICOLLON term RPARAN  (44)

	VAR  shift 3
	LBRACE  shift 4
	LPARAN  shift 5
	ZERO  shift 6
	SUCC  shift 7
	NIL  shift 8
	TRUE  shift 9
	FALSE  shift 10
	SLASH  shift 11
	FORALL  shift 12
	EXISTS  shift 13
	UNIT  shift 14
	BOOL  shift 15
	NAT  shift 16
	LSQ  shift 17
	PROP  shift 18
	SMALL  shift 19
	TYPE  shift 20
	NATREC  shift 21
	BOOLREC  shift 22
	SUMBOOLREC  shift 23
	MEMBERSHIP  shift 24
	SUBTRANS  shift 25
	SUBPROD  shift 26
	SUBREFL  shift 27
	SUBSUB  shift 28
	SUBGEN  shift 29
	SUBUNREFINE  shift 30
	SBOOLL  shift 31
	SBOOLR  shift 32
	OR_INTROL  shift 33
	OR_INTROR  shift 34
	AND_INTRO  shift 35
	EQ_REFL  shift 36
	EXIST  shift 37
	.  error

	const  goto 39
	term  goto 100
	atom_term  goto 41
	app_term  goto 42

